backend/internal/architecture/testdata/invalid/internal/modules/bad/internal/domain/article/entity.go
package article

type Entity struct{}
